# giget

./: LICENSE  pyproject.toml  setup.py
gitload.egg-info/: PKG-INFO  SOURCES.txt
